<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <ImageView
            android:id="@+id/movie_backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            tools:src="@mipmap/ic_launcher" />


        <LinearLayout
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/movie_backdrop"
            android:layout_alignRight="@id/movie_backdrop"
            android:layout_below="@id/movie_backdrop"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_detail_name"
                    style="@style/TextViewTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_view_margin"

                    android:gravity="start|center"
                    tools:text="CONJURING" />

                <TextView
                    android:id="@+id/movie_detail_plot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_view_margin"
                    tools:text="@string/demo_plot" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_detail_year"
                    style="@style/TextViewTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_view_margin"
                    android:gravity="center"
                    android:textStyle="italic"
                    tools:text="@string/demo_movie_year" />

                <include layout="@layout/horizontal_divider" />

                <TextView
                    android:id="@+id/movie_detail_rate"
                    style="@style/TextViewTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_view_margin"
                    android:gravity="center"
                    tools:text="@string/demo_movie_rate" />

                <include layout="@layout/horizontal_divider" />

                <ImageButton
                    android:id="@+id/movie_detail_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_favorite_border_black_48dp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/review_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/details"
            android:background="@color/colorPrimary"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/colorWhite"
            android:text="@string/show_review"
             />
        <Button
            android:id="@+id/trailer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/details"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/show_trailer"
            />

    </RelativeLayout>

</ScrollView>


